2009-02-08  Matt Rice  <ratmice@gmail.com>

	* Source/x11/XGGLContext.m (-[XGXSubWindow initWithView:visualInfo:]):
	Use the depth provided by the VisualInfo not the parent window.

2009-02-06 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m (-copyWithZone:): Correction to last
	change. 

2009-02-05 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m (-copyWithZone:): Better handling of
	clip copying when the clip is not representable by cairo.

2009-02-05 Fred Kiefer <FredKiefer@gmx.de>

	* Source/xlib/XGBitmap.m: Fix some compiler warnings.

2009-02-03 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/win32/WIN32Server.m (-setParentWindow:forChildWindow:),
	Temporarily comment out method implementation as it was preventing
	popup menus from working.

2009-01-30 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/win32/WIN32Server.m: fix typo
	* Source/x11/XGServerWindow.m: ditto

2009-01-29 Fred Kiefer <FredKiefer@gmx.de>

	* Source/win32/WIN32Server.m (-setPartentWindow:forChildWindow:),
	* Source/x11/XGServerWindow.m (-setPartentWindow:forChildWindow:):
	Implement new method.
	* Source/cairo/CairoGState.m (-compositeGState:...): Adjust y
	coordinate of point. 

2009-01-25 Riccardo Mottola <rmottola@users.sf.net>

	* Source/art/image.m: Fix for big-endiam machines

2009-01-24 Riccardo Mottola <rmottola@users.sf.net>

	* Source/art/image.m: Optimized and correct handling of 16 bit in
	_get_8_bits() 
	
2009-01-17  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/x11/XGServerWindow.m (_setSupportedWMProtocols:,
	_checkStyle:, window::::, orderwindow:::): Set the WM protocols
	supported by a window according to its style mask.

2009-01-13 Fred Kiefer <FredKiefer@gmx.de>

	* Source/art/ftfont.m: Give more information on failed font face access.

2008-12-21  Adam Fedor  <fedor@gnu.org>

	* Version 0.16.0

2008-12-19  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/x11/XGServerEvent.m (check_modifier): Fix an issue where